--- a/app/assets/javascripts/events.js.erb
+++ b/app/assets/javascripts/events.js.erb
@@ -52,21 +52,40 @@ $(function(){
 
   $('#event_organization_name').change(function(){
     $("#re-block").show();
+    $("#agents-block").show();
   });
 
   $('#event-represented-entities').bind('cocoon:after-insert', function() {
     if ($('#organization_id').val()){
       $.ajax({
         method: "GET",
-        url: $('#lobby-activity-event').data('new-url').replace('organization_id', $('#organization_id').val())
+        url: $('#re-block').data('new-url').replace('organization_id', $('#organization_id').val())
       }).done(function( represented_entities ) {
-        var select = $('#event-represented-entities select:last-child');
+        var select = $('#event-represented-entities select:last');
         if (represented_entities.length > 0) {
           $.each(represented_entities, function(id, represented_entity){
             select.append($('<option>', { value: represented_entity.name, text: represented_entity.name }));
           });
         } else {
           select.append($('<option>', { value: $('#event_organization_name').val(), text: $('#event_organization_name').val() }));
+        }
+      });
+    }
+  });
+
+  $('#event-agents').bind('cocoon:after-insert', function() {
+    if ($('#organization_id').val()){
+      $.ajax({
+        method: "GET",
+        url: $('#agents-block').data('new-url').replace('organization_id', $('#organization_id').val())
+      }).done(function( agents ) {
+        var select = $('#event-agents select:last');
+        if (agents.length > 0) {
+          $.each(agents, function(id, agent){
+            select.append($('<option>', { value: agent.name, text: agent.name }));
+          });
+        } else {
+          select.append($('<option>', { value: "No hay agentes disponibles.", text: "No hay agentes disponibles." }));
         }
       });
     }
