--- a/app/views/events/_event_agent_fields.html.erb
+++ b/app/views/events/_event_agent_fields.html.erb
@@ -1,7 +1,7 @@
 <div class="nested-fields">
   <div class="row">
       <%= f.hidden_field :event_id, value: @event.id %>
-      <div id="select-represented-entities" class="small-8 columns">
+      <div id="select-agents" class="small-8 columns">
         <%= f.select :name, [], class: "large-8 columns unique", prompt: t('backend.select') %>
       </div>
     <div class="small-2 columns">
