--- a/app/views/events/_event_represented_entity_fields.html.erb
+++ b/app/views/events/_event_represented_entity_fields.html.erb
@@ -5,7 +5,7 @@
         <%= f.select :name, [], class: "large-8 columns unique", prompt: t('backend.select') %>
       </div>
     <div class="small-2 columns">
-      <%= link_to_remove_association t('backend.delete'), f, :class => "button tiny radius alert right" %>
+      <%= link_to_remove_association t('backend.delete'), f, :class => "button tiny radius alert right link_to_remove_association" %>
     </div>
   </div>
 </div>
