--- a/app/views/admin/organizations/_form.html.erb
+++ b/app/views/admin/organizations/_form.html.erb
@@ -16,10 +16,12 @@
       &nbsp
     </div>
     <div class="small-2 column">
-      <% if @organization.invalidate %>
-        <%= link_to t('backend.validate'), admin_organization_path(@organization, organization: {invalidate: false}), method: :put, :class=> "button radius success right" %>
-      <% else %>
-        <%= link_to t('backend.invalidate'), admin_organization_path(@organization, organization: {invalidate: true}), method: :put, :class=> "button radius alert right" %>
+      <% if @organization.id %>
+        <% if @organization.invalidate %>
+          <%= link_to t('backend.validate'), admin_organization_path(@organization, organization: {invalidate: false}), method: :put, :class=> "button radius success right" %>
+        <% else %>
+          <%= link_to t('backend.invalidate'), admin_organization_path(@organization, organization: {invalidate: true}), method: :put, :class=> "button radius alert right" %>
+        <% end %>
       <% end %>
     </div>
     <div class="small-2 column">
