--- a/app/assets/stylesheets/all.css.scss
+++ b/app/assets/stylesheets/all.css.scss
@@ -7288,3 +7288,7 @@ select {
     background: #004A83;
     padding: 0;
   }
+
+#lobby-activity-event #event-category{
+  display: inline-block;
+}
