--- a/app/views/infringement_emails/new.html.erb
+++ b/app/views/infringement_emails/new.html.erb
@@ -2,7 +2,7 @@
 <%= link_to t('backend.back'), :back , :class=> "button tiny radius" %>
 <p><%= t('infringement_mailbox.description') %></p>
 
-<%= form_for @infringement_email, { multipart: true } do |f| %>
+<%= form_for @infringement_email do |f| %>
   <fieldset>
     <legend><%= t('infringement_mailbox.legend') %></legend>
     <%= f.label :subject, t('infringement_mailbox.subject_title') %>
@@ -12,14 +12,18 @@
 
     <%= f.label :link, t('infringement_mailbox.link_title') %>
     <%= f.text_field :link, placeholder: t('infringement_mailbox.link_placeholder') %>
-    <%= t('infringement_mailbox.link_info') %>
+    <p><%= t('infringement_mailbox.link_info') %></p>
 
-    <%= f.label :attachment, t('infringement_mailbox.attachment_title') %>
-    <%= f.file_field :attachment %>
-    <%= t('infringement_mailbox.attachment_info') %>
+    <div>
+      <%= f.label :attachment, t('infringement_mailbox.attachment_title') %>
+      <%= f.file_field :attachment %>
+      <p><%= t('infringement_mailbox.attachment_info') %></p>
+    </div>
 
+    <div>
     <%= f.label :description, t('infringement_mailbox.description_title') %>
     <%= f.text_area :description, class: 'tinymce'%>
+    </div>
   </fieldset>
   <%= f.submit t('infringement_mailbox.send'), class: "button radius success right" %>
 <% end %>
