--- a/app/views/user_mailer/infringement_email.html.erb
+++ b/app/views/user_mailer/infringement_email.html.erb
@@ -1,3 +1,3 @@
-El contenido se encuentra en: <%= @email.link %>
+<%= t('mailer.infringement_email.link_html', link: @email.link) %>
 
 <%= @email.description.html_safe %>
