--- a/app/views/admin/organizations/_lobby_data.html.erb
+++ b/app/views/admin/organizations/_lobby_data.html.erb
@@ -7,8 +7,9 @@
       <%= form_field_errors(f, :fiscal_year) %>
     </div>
     <div class="small-6 columns">
-      <%= f.label :range_fund, t('backend.lobbies_data.range_fund') %>
-      <%= f.select :range_fund, Organization.range_funds.keys.to_a %>
+      <%= f.label :range_fund, t('backend.lobbies_data.range_fund_title') %>
+      <%= f.select :range_fund, Organization.range_funds.keys.map {|key| [t("backend.lobbies_data.range_fund.#{key}"), key]} %>
+
       <%= form_field_errors(f, :range_fund) %>
     </div>
     <div class="small-12 columns">
