Added new small and medium class for reponsive design.

--- a/app/views/admin/organizations/_data.html.erb
+++ b/app/views/admin/organizations/_data.html.erb
@@ -1,32 +1,32 @@
 <fieldset>
   <legend><%= t('backend.identifying_data.title_fieldset') %></legend>
   <div class="row">
-    <div class="small-6 columns">
+    <div class="small-12 medium-6 columns">
       <%= f.label :identifier, t('backend.identifying_data.identifier') %>
       <%= f.text_field :identifier %>
       <%= form_field_errors(f, :identifier) %>
     </div>
-    <div class="small-6 columns">
+    <div class="small-12 medium-6 columns">
       <%= f.label :name, t('backend.identifying_data.name') %>
       <%= f.text_field :name %>
       <%= form_field_errors(f, :name) %>
     </div>
-    <div class="small-6 columns">
+    <div class="small-12 medium-6 columns">
       <%= f.label :first_surname, t('backend.identifying_data.first_surname') %>
       <%= f.text_field :first_surname %>
       <%= form_field_errors(f, :first_surname) %>
     </div>
-    <div class="small-6 columns">
+    <div class="small-12 medium-6 columns">
       <%= f.label :second_surname, t('backend.identifying_data.second_surname') %>
       <%= f.text_field :second_surname %>
       <%= form_field_errors(f, :second_surname) %>
     </div>
-    <div class="small-6 columns">
+    <div class="small-12 medium-6 columns">
       <%= f.label :phones, t('backend.identifying_data.phones') %>
       <%= f.text_field :phones %>
       <%= form_field_errors(f, :phones) %>
     </div>
-    <div class="small-6 columns">
+    <div class="small-12 medium-6 columns">
       <%= f.label :email, t('backend.identifying_data.email') %>
       <%= f.text_field :email %>
       <%= form_field_errors(f, :email) %>
@@ -41,52 +41,52 @@
       <%= f.text_field :web %>
       <%= form_field_errors(f, :web) %>
     </div>
-    <div class="small-4 columns">
+    <div class="small-12 medium-4 columns">
       <%= f.label :address_type, t('backend.identifying_data.address_type') %>
       <%= f.text_field :address_type %>
       <%= form_field_errors(f, :address_type) %>
     </div>
-    <div class="small-8 columns">
+    <div class="small-12 medium-8 columns">
       <%= f.label :address, t('backend.identifying_data.address') %>
       <%= f.text_field :address %>
       <%= form_field_errors(f, :address) %>
     </div>
-    <div class="small-3 columns">
+    <div class="small-12 medium-3 columns">
       <%= f.label :number, t('backend.identifying_data.number') %>
       <%= f.text_field :number %>
       <%= form_field_errors(f, :number) %>
     </div>
-    <div class="small-3 columns">
+    <div class="small-12 medium-3 columns">
       <%= f.label :gateway, t('backend.identifying_data.gateway') %>
       <%= f.text_field :gateway %>
       <%= form_field_errors(f, :gateway) %>
     </div>
-    <div class="small-3 columns">
+    <div class="small-12 medium-3 columns">
       <%= f.label :stairs, t('backend.identifying_data.stairs') %>
       <%= f.text_field :stairs %>
       <%= form_field_errors(f, :stairs) %>
     </div>
-    <div class="small-3 columns">
+    <div class="small-12 medium-3 columns">
       <%= f.label :floor, t('backend.identifying_data.floor') %>
       <%= f.text_field :floor %>
       <%= form_field_errors(f, :floor) %>
     </div>
-    <div class="small-3 columns">
+    <div class="small-12 medium-3 columns">
       <%= f.label :door, t('backend.identifying_data.door') %>
       <%= f.text_field :door %>
       <%= form_field_errors(f, :door) %>
     </div>
-    <div class="small-3 columns">
+    <div class="small-12 medium-3 columns">
       <%= f.label :postal_code, t('backend.identifying_data.postal_code') %>
       <%= f.text_field :postal_code %>
       <%= form_field_errors(f, :postal_code) %>
     </div>
-    <div class="small-3 columns">
+    <div class="small-12 medium-3 columns">
       <%= f.label :town, t('backend.identifying_data.town') %>
       <%= f.text_field :town %>
       <%= form_field_errors(f, :town) %>
     </div>
-    <div class="small-3 columns">
+    <div class="small-12 medium-3 columns">
       <%= f.label :province, t('backend.identifying_data.province') %>
       <%= f.text_field :province %>
       <%= form_field_errors(f, :province) %>
