--- a/app/views/admin/organizations/_interests.html.erb
+++ b/app/views/admin/organizations/_interests.html.erb
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="small-12 columns">
       <%= f.collection_check_boxes(:interest_ids, Interest.all, :id, :name) do |f| %>
-        <%= f.label class:"small-6 columns" do %>
+        <%= f.label class:"small-12 medium-6 columns" do %>
           <%= f.check_box %> <span> <%= f.text %> </span>
         <% end %>
       <% end %>
