Added some style in organizations index for responsive design. Changed link blank with _blank for opera browser.

--- a/app/views/admin/organizations/_admin_search_form.html.erb
+++ b/app/views/admin/organizations/_admin_search_form.html.erb
@@ -2,7 +2,7 @@
   <br />
   <%= form_tag admin_organizations_path, method: :get do %>
     <%= hidden_field_tag :order, params[:order] %>
-    <div class="small-6 medium-12 columns">
+    <div class="small-12 columns">
       <%= label_tag(:search_title, t("organizations.description")) %>
       <%= text_field_tag :keyword, params[:keyword], placeholder: t('main.form.keyword') %>
     </div>
