Remove column class in some div for mantain the same style.

--- a/app/views/admin/organizations/new.html.erb
+++ b/app/views/admin/organizations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="small-12 column mt5 organizations-new">
+<div class="small-12 mt5 organizations-new">
   <h1><%= t('backend.new_organization_title')%></h1>
   <%= link_to t('backend.back'), admin_organizations_path , :class=> "button tiny radius" %>
 </div>
