--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="small-12 column mt5">
+<div class="small-12 mt5">
   <h1><%= t('backend.edit_event')%></h1>
   <%= link_to t('backend.back'), events_path , :class=> "button tiny radius" %>
 </div>
