--- a/app/views/events/_attachment_fields.html.erb
+++ b/app/views/events/_attachment_fields.html.erb
@@ -2,6 +2,7 @@
   <div class="row">
 
     <div class="small-12 columns">
+      <%= t('backend.file') %>
       <%= f.text_field :title, class: "attachment-title" %>
     </div>
 
