Add callback to set invalidate field. Last version cant render organization show because invalidate field are not initizalized. Fix translate.

--- a/app/views/admin/organizations/_user_fields.html.erb
+++ b/app/views/admin/organizations/_user_fields.html.erb
@@ -13,7 +13,7 @@
   </div>
 
   <div class="small-6 columns">
-    <%= f.label :last_name, t('backend.contact_person.second_surname') %>
+    <%= f.label :last_name, t('backend.contact_person.surnames') %>
     <%= f.text_field :last_name %>
     <%= form_field_errors(f, :last_name) %>
   </div>
